check_PROGRAMS = $(mlapack_qd_test_PROGRAMS) 
TESTS = $(check_PROGRAMS)
mlapack_qd_test_PROGRAMS = \
Mutils.debug.qd_ref Mutils.debug.qd\
Rlamch.debug.qd_ref Rlamch.debug.qd\
Rlae2.debug_qd_ref  Rlae2.debug_qd\
Rlaev2.debug_qd_ref Rlaev2.debug_qd\
Claev2.debug_qd_ref Claev2.debug_qd\
Rlassq.debug_qd_ref Rlassq.debug_qd\
Classq.debug_qd_ref Classq.debug_qd\
Rlanst.debug_qd_ref Rlanst.debug_qd\
Clanht.debug_qd_ref Clanht.debug_qd\
Rlansy.debug_qd_ref Rlansy.debug_qd\
Clansy.debug_qd_ref Clansy.debug_qd\
Clanhe.debug_qd_ref Clanhe.debug_qd\
Rlapy2.debug_qd_ref Rlapy2.debug_qd\
Rlarfg.debug_qd_ref Rlarfg.debug_qd\
Rlapy3.debug_qd_ref Rlapy3.debug_qd\
Rladiv.debug_qd_ref Rladiv.debug_qd\
Cladiv.debug_qd_ref Cladiv.debug_qd\
Clarfg.debug_qd_ref Clarfg.debug_qd\
Rlartg.debug_qd_ref Rlartg.debug_qd\
Clartg.debug_qd_ref Clartg.debug_qd\
Rlaset.debug_qd_ref Rlaset.debug_qd\
Claset.debug_qd_ref Claset.debug_qd\
Rlasr.debug_qd_ref  Rlasr.debug_qd\
Clasr.debug_qd_ref  Clasr.debug_qd\
Rpotf2.debug_qd_ref Rpotf2.debug_qd\
Clacgv.debug_qd_ref Clacgv.debug_qd\
Cpotf2.debug_qd_ref Cpotf2.debug_qd\
Rlascl.debug_qd_ref Rlascl.debug_qd\
Clascl.debug_qd_ref Clascl.debug_qd\
Rlasrt.debug_qd_ref Rlasrt.debug_qd\
Rsytd2.debug_qd_ref Rsytd2.debug_qd\
Chetd2.debug_qd_ref Chetd2.debug_qd\
Rsteqr.debug_qd_ref Rsteqr.debug_qd\
Csteqr.debug_qd_ref Csteqr.debug_qd\
Rsterf.debug_qd_ref Rsterf.debug_qd\
Rlarf.debug_qd_ref  Rlarf.debug_qd \
Clarf.debug_qd_ref  Clarf.debug_qd \
Rorg2l.debug_qd_ref Rorg2l.debug_qd\
Cung2l.debug_qd_ref Cung2l.debug_qd\
Rorg2r.debug_qd_ref Rorg2r.debug_qd\
Cung2r.debug_qd_ref Cung2r.debug_qd\
Rlarft.debug_qd_ref Rlarft.debug_qd\
Clarft.debug_qd_ref Clarft.debug_qd\
Rlarfb.debug_qd_ref Rlarfb.debug_qd\
Clarfb.debug_qd_ref Clarfb.debug_qd\
Rorgqr.debug_qd_ref Rorgqr.debug_qd\
Cungqr.debug_qd_ref Cungqr.debug_qd\
Rorgql.debug_qd_ref Rorgql.debug_qd\
Cungql.debug_qd_ref Cungql.debug_qd\
Rlatrd.debug_qd_ref Rlatrd.debug_qd\
Clatrd.debug_qd_ref Clatrd.debug_qd\
Rsytrd.debug_qd_ref Rsytrd.debug_qd\
Chetrd.debug_qd_ref Chetrd.debug_qd\
Rorgtr.debug_qd_ref Rorgtr.debug_qd\
Cungtr.debug_qd_ref Cungtr.debug_qd\
Rsyev.debug_qd_ref  Rsyev.debug_qd \
Cheev.debug_qd_ref  Cheev.debug_qd \
Rpotrf.debug_qd_ref Rpotrf.debug_qd\
Cpotrf.debug_qd_ref Cpotrf.debug_qd\
Clacrm.debug_qd_ref Clacrm.debug_qd\
Rtrti2.debug_qd_ref Rtrti2.debug_qd\
Ctrti2.debug_qd_ref Ctrti2.debug_qd\
Rtrtri.debug_qd_ref Rtrtri.debug_qd\
Ctrtri.debug_qd_ref Ctrtri.debug_qd\
Rgetf2.debug_qd_ref Rgetf2.debug_qd\
Cgetf2.debug_qd_ref Cgetf2.debug_qd\
Rlaswp.debug_qd_ref Rlaswp.debug_qd\
Claswp.debug_qd_ref Claswp.debug_qd\
Rgetrf.debug_qd_ref Rgetrf.debug_qd\
Cgetrf.debug_qd_ref Cgetrf.debug_qd\
Rgetri.debug_qd_ref Rgetri.debug_qd\
Cgetri.debug_qd_ref Cgetri.debug_qd\
Rgetrs.debug_qd_ref Rgetrs.debug_qd\
Cgetrs.debug_qd_ref Cgetrs.debug_qd\
Rgesv.debug_qd_ref  Rgesv.debug_qd \
Cgesv.debug_qd_ref  Cgesv.debug_qd \
Rtrtrs.debug_qd_ref Rtrtrs.debug_qd\
Ctrtrs.debug_qd_ref Ctrtrs.debug_qd\
Rlasyf.debug_qd_ref Rlasyf.debug_qd\
Clasyf.debug_qd_ref Clasyf.debug_qd\
Clahef.debug_qd_ref Clahef.debug_qd\
Clacrt.debug_qd_ref Clacrt.debug_qd\
Claesy.debug_qd_ref Claesy.debug_qd\
Crot.debug_qd_ref   Crot.debug_qd  \
Cspmv.debug_qd_ref  Cspmv.debug_qd \
Cspr.debug_qd_ref   Cspr.debug_qd  \
Csymv.debug_qd_ref  Csymv.debug_qd \
Csyr.debug_qd_ref   Csyr.debug_qd  \
iCmax1.debug_qd_ref iCmax1.debug_qd\
RCsum1.debug_qd_ref RCsum1.debug_qd\
Rpotrs.debug_qd_ref Rpotrs.debug_qd\
Rposv.debug_qd_ref  Rposv.debug_qd \
Rgeequ.debug_qd_ref Rgeequ.debug_qd\
Rlatrs.debug_qd_ref Rlatrs.debug_qd\
Rlange.debug_qd_ref Rlange.debug_qd\
Rgecon.debug_qd_ref Rgecon.debug_qd Rgecon.test_qd_ref  Rgecon.test_qd \
Rlauu2.debug_qd_ref Rlauu2.debug_qd\
Rlauum.debug_qd_ref Rlauum.debug_qd\
Rpotri.debug_qd_ref Rpotri.debug_qd\
Rpocon.debug_qd_ref Rpocon.debug_qd Rpocon.test_qd_ref  Rpocon.test_qd
 
#Rlacn2.debug_qd_ref Rlacn2.debug_qd

mlapack_qd_testdir = $(prefix)/share/mpack/debug/qd
ref_libdepends = -L$(top_builddir)/mlapack/reference -lmlapack_qd_ref -lmlapack_mpfr_ref -L$(top_builddir)/mblas/reference -lmblas_qd_ref -lmblas_mpfr_ref
opt_libdepends = -L$(top_builddir)/mlapack/optimized/qd -lmlapack_qd -L$(top_builddir)/mblas/optimized/qd -lmblas_qd  -L$(top_builddir)/mlapack/reference -lmlapack_mpfr_ref -L$(top_builddir)/mblas/reference -lmblas_mpfr_ref
mplibs=-L$(top_srcdir)/$(MPC_LIBDIR) -L$(top_srcdir)/$(MPFR_LIBDIR) -L$(top_srcdir)/$(QD_LIBDIR) -L$(top_builddir)/mpfrc++ -lmpfrcxx -lmpc -lmpfr -lgmpxx -lgmp -L$(top_srcdir)/$(QD_LIBDIR) -lqd
refblas=-L$(top_builddir)/external/i/LAPACK/lib -lblas $(FCLIBS)
reflapack=-L$(top_builddir)/external/i/LAPACK/lib -llapack $(FCLIBS)

debug_cxxflags = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(top_srcdir)/$(GMP_INCLUDEDIR) -I$(top_srcdir)/$(MPFR_INCLUDEDIR) -I$(top_srcdir)/$(MPC_INCLUDEDIR) -I$(top_srcdir)/mpfrc++ -I$(top_srcdir)/$(QD_INCLUDEDIR) -D___MPACK_BUILD_WITH_QD___
debug_libdepends = $(mplibs) $(reflapack) $(refblas)
AM_FFLAGS = -x f77-cpp-input -g

if !IS_MACOSX
debug_srcdepends = ../../../mblas/debug/common/xerbla.cpp ../../../mblas/debug/common/mpack.debug.cpp ../../../mblas/debug/common/Mxerbla.override.cpp
endif

if IS_MACOSX
lib_LTLIBRARIES = libmxerbla_override.la
libmxerbla_override_la_CPPFLAGS = -I$(top_srcdir)/include -D___MPACK_BUILD_WITH_QD___
libmxerbla_override_la_SOURCES =  ../../../mblas/debug/common/Mxerbla.override.cpp
libmxerbla_override_la_LDFLAGS= -Wl,-flat_namespace,-undefined,dynamic_lookup
debug_srcdepends = ../../../mblas/debug/common/xerbla.cpp ../../../mblas/debug/common/mpack.debug.cpp
mplibs+=-Wl,-flat_namespace,-undefined,dynamic_lookup
TESTS_ENVIRONMENT=DYLD_INSERT_LIBRARIES=.libs/libmxerbla_override.0.dylib
endif

Mutils_debug_qd_SOURCES  = ../common/Mutils.debug.cpp $(debug_srcdepends) ../common/ilaenv.cpp
Mutils_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Mutils_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Mutils_debug_qd_ref_SOURCES  = ../common/Mutils.debug.cpp $(debug_srcdepends)
Mutils_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Mutils_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlamch_debug_qd_SOURCES  = ../common/Rlamch.debug.cpp $(debug_srcdepends)
Rlamch_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlamch_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlamch_debug_qd_ref_SOURCES  = ../common/Rlamch.debug.cpp $(debug_srcdepends)
Rlamch_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlamch_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlae2_debug_qd_SOURCES  = ../common/Rlae2.debug.cpp $(debug_srcdepends)
Rlae2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlae2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlae2_debug_qd_ref_SOURCES  = ../common/Rlae2.debug.cpp $(debug_srcdepends)
Rlae2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlae2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlaev2_debug_qd_SOURCES  = ../common/Rlaev2.debug.cpp $(debug_srcdepends)
Rlaev2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlaev2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlaev2_debug_qd_ref_SOURCES  = ../common/Rlaev2.debug.cpp $(debug_srcdepends)
Rlaev2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlaev2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Claev2_debug_qd_SOURCES  = ../common/Claev2.debug.cpp $(debug_srcdepends)
Claev2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Claev2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Claev2_debug_qd_ref_SOURCES  = ../common/Claev2.debug.cpp $(debug_srcdepends)
Claev2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Claev2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlassq_debug_qd_SOURCES  = ../common/Rlassq.debug.cpp $(debug_srcdepends)
Rlassq_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlassq_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlassq_debug_qd_ref_SOURCES  = ../common/Rlassq.debug.cpp $(debug_srcdepends)
Rlassq_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlassq_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Classq_debug_qd_SOURCES  = ../common/Classq.debug.cpp $(debug_srcdepends)
Classq_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Classq_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Classq_debug_qd_ref_SOURCES  = ../common/Classq.debug.cpp $(debug_srcdepends)
Classq_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Classq_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlanst_debug_qd_SOURCES  = ../common/Rlanst.debug.cpp $(debug_srcdepends)
Rlanst_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlanst_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlanst_debug_qd_ref_SOURCES  = ../common/Rlanst.debug.cpp $(debug_srcdepends)
Rlanst_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlanst_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Clanht_debug_qd_SOURCES  = ../common/Clanht.debug.cpp $(debug_srcdepends)
Clanht_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clanht_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clanht_debug_qd_ref_SOURCES  = ../common/Clanht.debug.cpp $(debug_srcdepends)
Clanht_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clanht_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlansy_debug_qd_SOURCES  = ../common/Rlansy.debug.cpp $(debug_srcdepends)
Rlansy_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlansy_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlansy_debug_qd_ref_SOURCES  = ../common/Rlansy.debug.cpp $(debug_srcdepends)
Rlansy_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlansy_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Clansy_debug_qd_SOURCES  = ../common/Clansy.debug.cpp $(debug_srcdepends)
Clansy_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clansy_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clansy_debug_qd_ref_SOURCES  = ../common/Clansy.debug.cpp $(debug_srcdepends)
Clansy_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clansy_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Clanhe_debug_qd_SOURCES  = ../common/Clanhe.debug.cpp $(debug_srcdepends)
Clanhe_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clanhe_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clanhe_debug_qd_ref_SOURCES  = ../common/Clanhe.debug.cpp $(debug_srcdepends)
Clanhe_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clanhe_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlapy2_debug_qd_SOURCES  = ../common/Rlapy2.debug.cpp $(debug_srcdepends)
Rlapy2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlapy2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlarfg_debug_qd_SOURCES  = ../common/Rlarfg.debug.cpp $(debug_srcdepends)
Rlarfg_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlarfg_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlarfg_debug_qd_ref_SOURCES  = ../common/Rlarfg.debug.cpp $(debug_srcdepends)
Rlarfg_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlarfg_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlapy2_debug_qd_ref_SOURCES  = ../common/Rlapy2.debug.cpp $(debug_srcdepends)
Rlapy2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlapy2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlapy3_debug_qd_SOURCES  = ../common/Rlapy3.debug.cpp $(debug_srcdepends)
Rlapy3_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlapy3_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlapy3_debug_qd_ref_SOURCES  = ../common/Rlapy3.debug.cpp $(debug_srcdepends)
Rlapy3_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlapy3_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rladiv_debug_qd_SOURCES  = ../common/Rladiv.debug.cpp $(debug_srcdepends)
Rladiv_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rladiv_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rladiv_debug_qd_ref_SOURCES  = ../common/Rladiv.debug.cpp $(debug_srcdepends)
Rladiv_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rladiv_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Cladiv_debug_qd_SOURCES  = ../common/Cladiv.debug.cpp $(debug_srcdepends)
Cladiv_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cladiv_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cladiv_debug_qd_ref_SOURCES  = ../common/Cladiv.debug.cpp $(debug_srcdepends)
Cladiv_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cladiv_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Clarfg_debug_qd_SOURCES  = ../common/Clarfg.debug.cpp $(debug_srcdepends)
Clarfg_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clarfg_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clarfg_debug_qd_ref_SOURCES  = ../common/Clarfg.debug.cpp $(debug_srcdepends)
Clarfg_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clarfg_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlartg_debug_qd_SOURCES  = ../common/Rlartg.debug.cpp $(debug_srcdepends)
Rlartg_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlartg_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlartg_debug_qd_ref_SOURCES  = ../common/Rlartg.debug.cpp $(debug_srcdepends)
Rlartg_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlartg_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Clartg_debug_qd_SOURCES  = ../common/Clartg.debug.cpp $(debug_srcdepends)
Clartg_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clartg_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clartg_debug_qd_ref_SOURCES  = ../common/Clartg.debug.cpp $(debug_srcdepends)
Clartg_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clartg_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlaset_debug_qd_SOURCES  = ../common/Rlaset.debug.cpp $(debug_srcdepends)
Rlaset_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlaset_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlaset_debug_qd_ref_SOURCES  = ../common/Rlaset.debug.cpp $(debug_srcdepends)
Rlaset_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlaset_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Claset_debug_qd_SOURCES  = ../common/Claset.debug.cpp $(debug_srcdepends)
Claset_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Claset_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Claset_debug_qd_ref_SOURCES  = ../common/Claset.debug.cpp $(debug_srcdepends)
Claset_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Claset_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlasr_debug_qd_SOURCES  = ../common/Rlasr.debug.cpp $(debug_srcdepends)
Rlasr_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlasr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlasr_debug_qd_ref_SOURCES  = ../common/Rlasr.debug.cpp $(debug_srcdepends)
Rlasr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlasr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Clasr_debug_qd_SOURCES  = ../common/Clasr.debug.cpp $(debug_srcdepends)
Clasr_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clasr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clasr_debug_qd_ref_SOURCES  = ../common/Clasr.debug.cpp $(debug_srcdepends)
Clasr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clasr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rpotf2_debug_qd_SOURCES  = ../common/Rpotf2.debug.cpp $(debug_srcdepends)
Rpotf2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpotf2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rpotf2_debug_qd_ref_SOURCES  = ../common/Rpotf2.debug.cpp $(debug_srcdepends)
Rpotf2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpotf2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Clacgv_debug_qd_SOURCES  = ../common/Clacgv.debug.cpp $(debug_srcdepends)
Clacgv_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clacgv_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clacgv_debug_qd_ref_SOURCES  = ../common/Clacgv.debug.cpp $(debug_srcdepends)
Clacgv_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clacgv_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Cpotf2_debug_qd_SOURCES  = ../common/Cpotf2.debug.cpp $(debug_srcdepends)
Cpotf2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cpotf2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cpotf2_debug_qd_ref_SOURCES  = ../common/Cpotf2.debug.cpp $(debug_srcdepends)
Cpotf2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cpotf2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlascl_debug_qd_SOURCES  = ../common/Rlascl.debug.cpp $(debug_srcdepends)
Rlascl_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlascl_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlascl_debug_qd_ref_SOURCES  = ../common/Rlascl.debug.cpp $(debug_srcdepends)
Rlascl_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlascl_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Clascl_debug_qd_SOURCES  = ../common/Clascl.debug.cpp $(debug_srcdepends)
Clascl_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clascl_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clascl_debug_qd_ref_SOURCES  = ../common/Clascl.debug.cpp $(debug_srcdepends)
Clascl_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clascl_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlasrt_debug_qd_SOURCES  = ../common/Rlasrt.debug.cpp $(debug_srcdepends)
Rlasrt_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlasrt_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlasrt_debug_qd_ref_SOURCES  = ../common/Rlasrt.debug.cpp $(debug_srcdepends)
Rlasrt_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlasrt_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rsytd2_debug_qd_SOURCES  = ../common/Rsytd2.debug.cpp $(debug_srcdepends)
Rsytd2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rsytd2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rsytd2_debug_qd_ref_SOURCES  = ../common/Rsytd2.debug.cpp $(debug_srcdepends)
Rsytd2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsytd2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Chetd2_debug_qd_SOURCES  = ../common/Chetd2.debug.cpp $(debug_srcdepends)
Chetd2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Chetd2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Chetd2_debug_qd_ref_SOURCES  = ../common/Chetd2.debug.cpp $(debug_srcdepends)
Chetd2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Chetd2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rsteqr_debug_qd_ref_SOURCES  = ../common/Rsteqr.debug.cpp $(debug_srcdepends)
Rsteqr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsteqr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rsteqr_debug_qd_SOURCES  = ../common/Rsteqr.debug.cpp $(debug_srcdepends)
Rsteqr_debug_qd_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsteqr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Csteqr_debug_qd_SOURCES  = ../common/Csteqr.debug.cpp $(debug_srcdepends)
Csteqr_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Csteqr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Csteqr_debug_qd_ref_SOURCES  = ../common/Csteqr.debug.cpp $(debug_srcdepends)
Csteqr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Csteqr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rsterf_debug_qd_SOURCES  = ../common/Rsterf.debug.cpp $(debug_srcdepends)
Rsterf_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rsterf_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rsterf_debug_qd_ref_SOURCES  = ../common/Rsterf.debug.cpp $(debug_srcdepends)
Rsterf_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsterf_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Rlarf_debug_qd_SOURCES  = ../common/Rlarf.debug.cpp $(debug_srcdepends)
Rlarf_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlarf_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlarf_debug_qd_ref_SOURCES  = ../common/Rlarf.debug.cpp $(debug_srcdepends)
Rlarf_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlarf_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)  

Clarf_debug_qd_SOURCES  = ../common/Clarf.debug.cpp $(debug_srcdepends)
Clarf_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clarf_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clarf_debug_qd_ref_SOURCES  = ../common/Clarf.debug.cpp $(debug_srcdepends)
Clarf_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clarf_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rorg2l_debug_qd_SOURCES  = ../common/Rorg2l.debug.cpp $(debug_srcdepends)
Rorg2l_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorg2l_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rorg2l_debug_qd_ref_SOURCES  = ../common/Rorg2l.debug.cpp $(debug_srcdepends)
Rorg2l_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorg2l_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cung2l_debug_qd_SOURCES  = ../common/Cung2l.debug.cpp $(debug_srcdepends)
Cung2l_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cung2l_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cung2l_debug_qd_ref_SOURCES  = ../common/Cung2l.debug.cpp $(debug_srcdepends)
Cung2l_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cung2l_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rorg2r_debug_qd_SOURCES  = ../common/Rorg2r.debug.cpp $(debug_srcdepends)
Rorg2r_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorg2r_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rorg2r_debug_qd_ref_SOURCES  = ../common/Rorg2r.debug.cpp $(debug_srcdepends)
Rorg2r_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorg2r_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cung2r_debug_qd_SOURCES  = ../common/Cung2r.debug.cpp $(debug_srcdepends)
Cung2r_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cung2r_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cung2r_debug_qd_ref_SOURCES  = ../common/Cung2r.debug.cpp $(debug_srcdepends)
Cung2r_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cung2r_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlarft_debug_qd_SOURCES  = ../common/Rlarft.debug.cpp $(debug_srcdepends)
Rlarft_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlarft_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlarft_debug_qd_ref_SOURCES  = ../common/Rlarft.debug.cpp $(debug_srcdepends)
Rlarft_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlarft_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Clarft_debug_qd_SOURCES  = ../common/Clarft.debug.cpp $(debug_srcdepends)
Clarft_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clarft_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clarft_debug_qd_ref_SOURCES  = ../common/Clarft.debug.cpp $(debug_srcdepends)
Clarft_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clarft_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlarfb_debug_qd_SOURCES  = ../common/Rlarfb.debug.cpp $(debug_srcdepends)
Rlarfb_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlarfb_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlarfb_debug_qd_ref_SOURCES  = ../common/Rlarfb.debug.cpp $(debug_srcdepends)
Rlarfb_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlarfb_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Clarfb_debug_qd_SOURCES  = ../common/Clarfb.debug.cpp $(debug_srcdepends)
Clarfb_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clarfb_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clarfb_debug_qd_ref_SOURCES  = ../common/Clarfb.debug.cpp $(debug_srcdepends)
Clarfb_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clarfb_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rorgqr_debug_qd_SOURCES  = ../common/Rorgqr.debug.cpp $(debug_srcdepends)
Rorgqr_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorgqr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rorgqr_debug_qd_ref_SOURCES  = ../common/Rorgqr.debug.cpp $(debug_srcdepends)
Rorgqr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorgqr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cungqr_debug_qd_SOURCES  = ../common/Cungqr.debug.cpp $(debug_srcdepends)
Cungqr_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cungqr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cungqr_debug_qd_ref_SOURCES  = ../common/Cungqr.debug.cpp $(debug_srcdepends)
Cungqr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cungqr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rorgql_debug_qd_SOURCES  = ../common/Rorgql.debug.cpp $(debug_srcdepends)
Rorgql_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorgql_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rorgql_debug_qd_ref_SOURCES  = ../common/Rorgql.debug.cpp $(debug_srcdepends)
Rorgql_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorgql_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cungql_debug_qd_SOURCES  = ../common/Cungql.debug.cpp $(debug_srcdepends)
Cungql_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cungql_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cungql_debug_qd_ref_SOURCES  = ../common/Cungql.debug.cpp $(debug_srcdepends)
Cungql_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cungql_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlatrd_debug_qd_SOURCES  = ../common/Rlatrd.debug.cpp $(debug_srcdepends)
Rlatrd_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlatrd_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlatrd_debug_qd_ref_SOURCES  = ../common/Rlatrd.debug.cpp $(debug_srcdepends)
Rlatrd_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlatrd_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Clatrd_debug_qd_SOURCES  = ../common/Clatrd.debug.cpp $(debug_srcdepends)
Clatrd_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clatrd_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clatrd_debug_qd_ref_SOURCES  = ../common/Clatrd.debug.cpp $(debug_srcdepends)
Clatrd_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clatrd_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rsytrd_debug_qd_SOURCES  = ../common/Rsytrd.debug.cpp $(debug_srcdepends)
Rsytrd_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rsytrd_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rsytrd_debug_qd_ref_SOURCES  = ../common/Rsytrd.debug.cpp $(debug_srcdepends)
Rsytrd_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsytrd_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Chetrd_debug_qd_SOURCES  = ../common/Chetrd.debug.cpp $(debug_srcdepends)
Chetrd_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Chetrd_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Chetrd_debug_qd_ref_SOURCES  = ../common/Chetrd.debug.cpp $(debug_srcdepends)
Chetrd_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Chetrd_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rorgtr_debug_qd_SOURCES  = ../common/Rorgtr.debug.cpp $(debug_srcdepends)
Rorgtr_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorgtr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rorgtr_debug_qd_ref_SOURCES  = ../common/Rorgtr.debug.cpp $(debug_srcdepends)
Rorgtr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorgtr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cungtr_debug_qd_SOURCES  = ../common/Cungtr.debug.cpp $(debug_srcdepends)
Cungtr_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cungtr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cungtr_debug_qd_ref_SOURCES  = ../common/Cungtr.debug.cpp $(debug_srcdepends)
Cungtr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cungtr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rsyev_debug_qd_SOURCES  = ../common/Rsyev.debug.cpp $(debug_srcdepends)
Rsyev_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rsyev_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rsyev_debug_qd_ref_SOURCES  = ../common/Rsyev.debug.cpp $(debug_srcdepends)
Rsyev_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsyev_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cheev_debug_qd_SOURCES  = ../common/Cheev.debug.cpp $(debug_srcdepends)
Cheev_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cheev_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cheev_debug_qd_ref_SOURCES  = ../common/Cheev.debug.cpp $(debug_srcdepends)
Cheev_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cheev_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rpotrf_debug_qd_SOURCES  = ../common/Rpotrf.debug.cpp $(debug_srcdepends)
Rpotrf_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpotrf_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rpotrf_debug_qd_ref_SOURCES  = ../common/Rpotrf.debug.cpp $(debug_srcdepends)
Rpotrf_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpotrf_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cpotrf_debug_qd_SOURCES  = ../common/Cpotrf.debug.cpp $(debug_srcdepends)
Cpotrf_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cpotrf_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cpotrf_debug_qd_ref_SOURCES  = ../common/Cpotrf.debug.cpp $(debug_srcdepends)
Cpotrf_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cpotrf_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Clacrm_debug_qd_SOURCES  = ../common/Clacrm.debug.cpp $(debug_srcdepends)
Clacrm_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clacrm_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clacrm_debug_qd_ref_SOURCES  = ../common/Clacrm.debug.cpp $(debug_srcdepends)
Clacrm_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clacrm_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rtrti2_debug_qd_SOURCES  = ../common/Rtrti2.debug.cpp $(debug_srcdepends)
Rtrti2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rtrti2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rtrti2_debug_qd_ref_SOURCES  = ../common/Rtrti2.debug.cpp $(debug_srcdepends)
Rtrti2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rtrti2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Ctrti2_debug_qd_SOURCES  = ../common/Ctrti2.debug.cpp $(debug_srcdepends)
Ctrti2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Ctrti2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Ctrti2_debug_qd_ref_SOURCES  = ../common/Ctrti2.debug.cpp $(debug_srcdepends)
Ctrti2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Ctrti2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rtrtri_debug_qd_SOURCES  = ../common/Rtrtri.debug.cpp $(debug_srcdepends)
Rtrtri_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rtrtri_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rtrtri_debug_qd_ref_SOURCES  = ../common/Rtrtri.debug.cpp $(debug_srcdepends)
Rtrtri_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rtrtri_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Ctrtri_debug_qd_SOURCES  = ../common/Ctrtri.debug.cpp $(debug_srcdepends)
Ctrtri_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Ctrtri_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Ctrtri_debug_qd_ref_SOURCES  = ../common/Ctrtri.debug.cpp $(debug_srcdepends)
Ctrtri_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Ctrtri_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgetf2_debug_qd_SOURCES  = ../common/Rgetf2.debug.cpp $(debug_srcdepends)
Rgetf2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgetf2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rgetf2_debug_qd_ref_SOURCES  = ../common/Rgetf2.debug.cpp $(debug_srcdepends)
Rgetf2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgetf2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cgetf2_debug_qd_SOURCES  = ../common/Cgetf2.debug.cpp $(debug_srcdepends)
Cgetf2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgetf2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cgetf2_debug_qd_ref_SOURCES  = ../common/Cgetf2.debug.cpp $(debug_srcdepends)
Cgetf2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgetf2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlaswp_debug_qd_SOURCES  = ../common/Rlaswp.debug.cpp $(debug_srcdepends)
Rlaswp_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlaswp_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlaswp_debug_qd_ref_SOURCES  = ../common/Rlaswp.debug.cpp $(debug_srcdepends)
Rlaswp_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlaswp_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Claswp_debug_qd_SOURCES  = ../common/Claswp.debug.cpp $(debug_srcdepends)
Claswp_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Claswp_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Claswp_debug_qd_ref_SOURCES  = ../common/Claswp.debug.cpp $(debug_srcdepends)
Claswp_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Claswp_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgetrf_debug_qd_SOURCES  = ../common/Rgetrf.debug.cpp $(debug_srcdepends)
Rgetrf_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgetrf_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rgetrf_debug_qd_ref_SOURCES  = ../common/Rgetrf.debug.cpp $(debug_srcdepends)
Rgetrf_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgetrf_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cgetrf_debug_qd_SOURCES  = ../common/Cgetrf.debug.cpp $(debug_srcdepends)
Cgetrf_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgetrf_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cgetrf_debug_qd_ref_SOURCES  = ../common/Cgetrf.debug.cpp $(debug_srcdepends)
Cgetrf_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgetrf_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgetri_debug_qd_ref_SOURCES  = ../common/Rgetri.debug.cpp $(debug_srcdepends)
Rgetri_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgetri_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgetri_debug_qd_SOURCES  = ../common/Rgetri.debug.cpp $(debug_srcdepends)
Rgetri_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgetri_debug_qd_CXXFLAGS = $(debug_cxxflags)

Cgetri_debug_qd_SOURCES  = ../common/Cgetri.debug.cpp $(debug_srcdepends)
Cgetri_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgetri_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cgetri_debug_qd_ref_SOURCES  = ../common/Cgetri.debug.cpp $(debug_srcdepends)
Cgetri_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgetri_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgetrs_debug_qd_ref_SOURCES  = ../common/Rgetrs.debug.cpp $(debug_srcdepends)
Rgetrs_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgetrs_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgetrs_debug_qd_SOURCES  = ../common/Rgetrs.debug.cpp $(debug_srcdepends)
Rgetrs_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgetrs_debug_qd_CXXFLAGS = $(debug_cxxflags)

Cgetrs_debug_qd_SOURCES  = ../common/Cgetrs.debug.cpp $(debug_srcdepends)
Cgetrs_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgetrs_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cgetrs_debug_qd_ref_SOURCES  = ../common/Cgetrs.debug.cpp $(debug_srcdepends)
Cgetrs_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgetrs_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgesv_debug_qd_ref_SOURCES  = ../common/Rgesv.debug.cpp $(debug_srcdepends)
Rgesv_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgesv_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgesv_debug_qd_SOURCES  = ../common/Rgesv.debug.cpp $(debug_srcdepends)
Rgesv_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgesv_debug_qd_CXXFLAGS = $(debug_cxxflags)

Cgesv_debug_qd_SOURCES  = ../common/Cgesv.debug.cpp $(debug_srcdepends)
Cgesv_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgesv_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cgesv_debug_qd_ref_SOURCES  = ../common/Cgesv.debug.cpp $(debug_srcdepends)
Cgesv_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgesv_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rtrtrs_debug_qd_ref_SOURCES  = ../common/Rtrtrs.debug.cpp $(debug_srcdepends)
Rtrtrs_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rtrtrs_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rtrtrs_debug_qd_SOURCES  = ../common/Rtrtrs.debug.cpp $(debug_srcdepends)
Rtrtrs_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rtrtrs_debug_qd_CXXFLAGS = $(debug_cxxflags)

Ctrtrs_debug_qd_SOURCES  = ../common/Ctrtrs.debug.cpp $(debug_srcdepends)
Ctrtrs_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Ctrtrs_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Ctrtrs_debug_qd_ref_SOURCES  = ../common/Ctrtrs.debug.cpp $(debug_srcdepends)
Ctrtrs_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Ctrtrs_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlasyf_debug_qd_ref_SOURCES  = ../common/Rlasyf.debug.cpp $(debug_srcdepends)
Rlasyf_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlasyf_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlasyf_debug_qd_SOURCES  = ../common/Rlasyf.debug.cpp $(debug_srcdepends)
Rlasyf_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlasyf_debug_qd_CXXFLAGS = $(debug_cxxflags)

Clasyf_debug_qd_SOURCES  = ../common/Clasyf.debug.cpp $(debug_srcdepends)
Clasyf_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clasyf_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clasyf_debug_qd_ref_SOURCES  = ../common/Clasyf.debug.cpp $(debug_srcdepends)
Clasyf_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clasyf_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Clahef_debug_qd_SOURCES  = ../common/Clahef.debug.cpp $(debug_srcdepends)
Clahef_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clahef_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clahef_debug_qd_ref_SOURCES  = ../common/Clahef.debug.cpp $(debug_srcdepends)
Clahef_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clahef_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Clacrt_debug_qd_SOURCES  = ../common/Clacrt.debug.cpp $(debug_srcdepends)
Clacrt_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clacrt_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Clacrt_debug_qd_ref_SOURCES  = ../common/Clacrt.debug.cpp $(debug_srcdepends)
Clacrt_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clacrt_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Claesy_debug_qd_SOURCES  = ../common/Claesy.debug.cpp $(debug_srcdepends)
Claesy_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Claesy_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Claesy_debug_qd_ref_SOURCES  = ../common/Claesy.debug.cpp $(debug_srcdepends)
Claesy_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Claesy_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Crot_debug_qd_SOURCES  = ../common/Crot.debug.cpp $(debug_srcdepends)
Crot_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Crot_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Crot_debug_qd_ref_SOURCES  = ../common/Crot.debug.cpp $(debug_srcdepends)
Crot_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Crot_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cspmv_debug_qd_SOURCES  = ../common/Cspmv.debug.cpp $(debug_srcdepends)
Cspmv_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cspmv_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cspmv_debug_qd_ref_SOURCES  = ../common/Cspmv.debug.cpp $(debug_srcdepends)
Cspmv_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cspmv_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Cspr_debug_qd_SOURCES  = ../common/Cspr.debug.cpp $(debug_srcdepends)
Cspr_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cspr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Cspr_debug_qd_ref_SOURCES  = ../common/Cspr.debug.cpp $(debug_srcdepends)
Cspr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cspr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Csymv_debug_qd_SOURCES  = ../common/Csymv.debug.cpp $(debug_srcdepends)
Csymv_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Csymv_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Csymv_debug_qd_ref_SOURCES  = ../common/Csymv.debug.cpp $(debug_srcdepends)
Csymv_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Csymv_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Csyr_debug_qd_SOURCES  = ../common/Csyr.debug.cpp $(debug_srcdepends)
Csyr_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Csyr_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Csyr_debug_qd_ref_SOURCES  = ../common/Csyr.debug.cpp $(debug_srcdepends)
Csyr_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Csyr_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

iCmax1_debug_qd_SOURCES  = ../common/iCmax1.debug.cpp $(debug_srcdepends)
iCmax1_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
iCmax1_debug_qd_CXXFLAGS = $(debug_cxxflags)  

iCmax1_debug_qd_ref_SOURCES  = ../common/iCmax1.debug.cpp $(debug_srcdepends)
iCmax1_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
iCmax1_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

RCsum1_debug_qd_SOURCES  = ../common/RCsum1.debug.cpp $(debug_srcdepends)
RCsum1_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
RCsum1_debug_qd_CXXFLAGS = $(debug_cxxflags)  

RCsum1_debug_qd_ref_SOURCES  = ../common/RCsum1.debug.cpp $(debug_srcdepends)
RCsum1_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
RCsum1_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rpotrs_debug_qd_SOURCES  = ../common/Rpotrs.debug.cpp $(debug_srcdepends)
Rpotrs_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpotrs_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rpotrs_debug_qd_ref_SOURCES  = ../common/Rpotrs.debug.cpp $(debug_srcdepends)
Rpotrs_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpotrs_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rposv_debug_qd_SOURCES  = ../common/Rposv.debug.cpp $(debug_srcdepends)
Rposv_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rposv_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rposv_debug_qd_ref_SOURCES  = ../common/Rposv.debug.cpp $(debug_srcdepends)
Rposv_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rposv_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlatrs_debug_qd_SOURCES  = ../common/Rlatrs.debug.cpp $(debug_srcdepends)
Rlatrs_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlatrs_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlatrs_debug_qd_ref_SOURCES  = ../common/Rlatrs.debug.cpp $(debug_srcdepends)
Rlatrs_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlatrs_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlange_debug_qd_SOURCES  = ../common/Rlange.debug.cpp $(debug_srcdepends)
Rlange_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlange_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlange_debug_qd_ref_SOURCES  = ../common/Rlange.debug.cpp $(debug_srcdepends)
Rlange_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlange_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgeequ_debug_qd_SOURCES  = ../common/Rgeequ.debug.cpp $(debug_srcdepends)
Rgeequ_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgeequ_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rgeequ_debug_qd_ref_SOURCES  = ../common/Rgeequ.debug.cpp $(debug_srcdepends)
Rgeequ_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgeequ_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

#Rlacn2_debug_qd_SOURCES  = ../common/Rlacn2.debug.cpp $(debug_srcdepends)
#Rlacn2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
#Rlacn2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

#Rlacn2_debug_qd_ref_SOURCES  = ../common/Rlacn2.debug.cpp $(debug_srcdepends)
#Rlacn2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
#Rlacn2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgecon_debug_qd_SOURCES  = ../common/Rgecon.debug.cpp $(debug_srcdepends)
Rgecon_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgecon_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rgecon_debug_qd_ref_SOURCES  = ../common/Rgecon.debug.cpp $(debug_srcdepends)
Rgecon_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgecon_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rgecon_test_qd_SOURCES  = ../common/Rgecon.test.cpp $(debug_srcdepends)
Rgecon_test_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgecon_test_qd_CXXFLAGS = $(debug_cxxflags)  

Rgecon_test_qd_ref_SOURCES  = ../common/Rgecon.test.cpp $(debug_srcdepends)
Rgecon_test_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgecon_test_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlauu2_debug_qd_SOURCES  = ../common/Rlauu2.debug.cpp $(debug_srcdepends)
Rlauu2_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlauu2_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlauu2_debug_qd_ref_SOURCES  = ../common/Rlauu2.debug.cpp $(debug_srcdepends)
Rlauu2_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlauu2_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rlauum_debug_qd_SOURCES  = ../common/Rlauum.debug.cpp $(debug_srcdepends)
Rlauum_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlauum_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rlauum_debug_qd_ref_SOURCES  = ../common/Rlauum.debug.cpp $(debug_srcdepends)
Rlauum_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlauum_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rpotri_debug_qd_SOURCES  = ../common/Rpotri.debug.cpp $(debug_srcdepends)
Rpotri_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpotri_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rpotri_debug_qd_ref_SOURCES  = ../common/Rpotri.debug.cpp $(debug_srcdepends)
Rpotri_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpotri_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rpocon_debug_qd_SOURCES  = ../common/Rpocon.debug.cpp $(debug_srcdepends)
Rpocon_debug_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpocon_debug_qd_CXXFLAGS = $(debug_cxxflags)  

Rpocon_debug_qd_ref_SOURCES  = ../common/Rpocon.debug.cpp $(debug_srcdepends)
Rpocon_debug_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpocon_debug_qd_ref_CXXFLAGS = $(debug_cxxflags)

Rpocon_test_qd_SOURCES  = ../common/Rpocon.test.cpp $(debug_srcdepends)
Rpocon_test_qd_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpocon_test_qd_CXXFLAGS = $(debug_cxxflags)  

Rpocon_test_qd_ref_SOURCES  = ../common/Rpocon.test.cpp $(debug_srcdepends)
Rpocon_test_qd_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpocon_test_qd_ref_CXXFLAGS = $(debug_cxxflags)
